fix word wrap issue 63

--- a/express/code/blocks/ax-columns/ax-columns.css
+++ b/express/code/blocks/ax-columns/ax-columns.css
@@ -17,6 +17,7 @@
   margin: auto;
   max-width: 350px;
   line-height: initial;
+  word-wrap: normal;
 }
 
 .ax-columns.centered {
